# pylint-requests

./: .bumpversion.cfg  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  release.yml
pylint_requests/: __init__.py  __pkginfo__.py  utils.py
pylint_requests/checkers/: __init__.py  requests_installed.py  timeout.py
tests/: test_checkers.py
tests/utils/: test_has_timeout.py  test_is_requests_func.py
