[tool.poetry]
name = "pylint-requests"
version = "0.1.1"
description = "A pylint plugin to check for common issues with usage of requests"
authors = ["Mikhail Burshteyn <mdburshteyn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m-burst/pylint-requests"
homepage = "https://pypi.org/project/pylint-requests"
keywords = ["pylint", "requests", "timeout"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.6.2"

astroid = "^2.0"
pylint = "^2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1"}
flake8-awesome = ">=0.2.0"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-cov = "^3.0"
pytest-deadfixtures = "^2.2"
pytest-mock = "^3.6.0"
unify = "^0.5.0"
requests = "^2.27"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
