[tool.poetry]
name = "pylint-requests"
version = "0.1.1"
description = "A pylint plugin to check for common issues with usage of requests"
authors = ["Mikhail Burshteyn <mdburshteyn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m-burst/pylint-requests"
homepage = "https://pypi.org/project/pylint-requests"
keywords = ["pylint", "requests", "timeout"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.8.1"

astroid = "^2.0"
pylint = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
flake8-awesome = ">=0.2.0"
mypy = "^1.4"
pytest = "^8.1.1"
pytest-cov = "^5.0"
pytest-deadfixtures = "^2.2"
pytest-mock = "^3.11.1"
unify = "^0.5.0"
requests = "^2.31"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
